# ControlPlane

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 20260409_0001_initial_schema.py  20260409_0002_add_users_table.py  20260409_0003_add_user_token_version.py  20260409_0004_add_execution_event_id.py  20260409_0005_add_audit_log_table.py
app/: main.py
app/api/: dependencies.py  router.py  security.py
app/api/admin/: dependencies.py  router.py
app/api/agent/: __init__.py  router.py
app/core/: __init__.py  config_validation.py  errors.py  exception_handlers.py  rbac.py  readiness.py  request_logging.py  security.py  settings.py  startup.py
app/db/: init_db.py  session.py
app/jobs/: cleanup.py
app/models/: __init__.py  artifact.py  audit.py  execution.py  group.py  host.py  inventory.py  playbook.py  policy.py  user.py
app/repositories/: in_memory.py  mock_data.py  providers.py  sqlalchemy_repositories.py
app/schemas/: admin.py  agent.py  desired_state.py
app/services/: admin_domains.py  agent_domains.py  artifact_storage.py  checksums.py  composition.py  control_plane_service.py  maintenance.py
docs/: roadmap.md
tests/: conftest.py  test_api.py  test_api_database.py  test_api_minio_stack.py  test_api_postgres.py  test_artifact_storage.py  test_artifact_storage_minio.py  test_bootstrap_admin.py  test_config_validation.py  test_maintenance.py  test_migrations.py
